--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "ci-cd-node-app",
   "version": "1.0.0",
-  "description": "A simple Node.js app for CI/CD pipeline demo",
+  "description": "Robust Node.js app for CI/CD pipeline",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Running tests...\" && exit 0",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "echo \"Running tests...\""
   },
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0"
+  },
+  "license": "MIT"
 }
